Добавляет незначительные правки в стили кнопок

--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,7 @@
               </a>
             </li>
             <li class="navigation-booking">
-              <a class="booking button" href="#">
+              <a class="button booking" href="#">
                 Хочу сюда!
               </a>
             </li>
@@ -270,7 +270,7 @@
           <p class="newsletter-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
             <input class="newsletter-text" type="email" id="newsletter-mail" name="newsletter-mail" placeholder="Ваш e-mail">
-            <button class="newsletter-button button" type="submit">Подписаться</button>
+            <button class="button newsletter-button" type="submit">Подписаться</button>
           </form>
         </section>
       </main>
