--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               </a>
             </li>
             <li class="navigation-booking">
-              <a class="booking button" href="#">
+              <a class="button booking" href="#">
                 Хочу сюда!
               </a>
             </li>
@@ -116,14 +116,14 @@
         <section class="suggestion">
           <h2>Заинтересовались?</h2>
           <p>Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="registration button" href="#">Поиск гостиницы в Седоне</a>
+          <a class="button registration" href="#">Поиск гостиницы в Седоне</a>
         </section>
         <section class="newsletter">
           <h2>Подпишитесь на рассылку</h2>
           <p>Только полезная информация и никакого спама, <br>честное бойскаутское!</p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
             <input class="newsletter-text" type="email" id="newsletter-mail" name="newsletter-mail" placeholder="Ваш e-mail">
-            <button class="newsletter-button button" type="submit">Подписаться</button>
+            <button class="button newsletter-button" type="submit">Подписаться</button>
           </form>
         </section>
       </main>
