--- a/catalog.html
+++ b/catalog.html
@@ -152,103 +152,112 @@
           <h2 class="visually-hidden">Список вариантов:</h2>
           <ul class="product-cards-list">
             <li class="product-item">
-              <a class="product-card-link" href="#">
+              <a class="product-card-link-image" href="#">
                 <img class="product-card-image" alt="Первый вариант гостиницы" src="images/hotel-1.jpg" width="300" height="212">
+              </a>
+              <a class="product-card-link">
                 <h3>Amara Resort & Spa</h3>
               </a>
-              <div class="product-card-description-wrapper">
-                <p>Гостиница</p>
-                <b>От 4000 ₽</b>
-                <a class="description-card-button" href="#">Подробнее</a>
-                <a class="description-card-button to-favorites-button" href="#">В избранное</a>
-                <ul class="stars-count">
-                  <li>
-                    <img class="stars" src="#" alt="1">
-                  </li>
-                  <li>
-                    <img class="stars" src="#" alt="2">
-                  </li>
-                  <li>
-                    <img class="stars" src="#" alt="3">
-                  </li>
-                  <li>
-                    <img class="stars" src="#" alt="4">
-                  </li>
-                </ul>
-                <p class="rating" href="#">Рейтинг: 8,5</p>
-              </div>
+              <p>Гостиница</p>
+              <b>От 4000 ₽</b>
+              <a class="button description-card-button" href="#">Подробнее</a>
+              <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
+              <ul class="stars-count">
+                <li>
+                  <img class="stars" src="#" alt="1">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="2">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="3">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="4">
+                </li>
+              </ul>
+              <p class="rating" href="#">Рейтинг: 8,5</p>
             </li>
             <li class="product-item">
-              <a class="product-card-link" href="#">
+              <a class="product-card-link-image" href="#">
                 <img class="product-card-image" alt="Второй вариант гостиницы" src="images/hotel-2.jpg" width="300" height="212">
+              </a>
+              <a class="product-card-link">
                 <h3>Villas at Poco Diablo</h3>
               </a>
-              <div class="product-card-description-wrapper">
-                <p>Гостиница</p>
-                <b>От 5000 ₽</b>
-                <a class="description-card-button" href="#">Подробнее</a>
-                <a class="description-card-button to-favorites-button" href="#">В избранное</a>
-                <ul class="stars-count">
-                  <li>
-                    <img class="stars" src="#" alt="1">
-                  </li>
-                  <li>
-                    <img class="stars" src="#" alt="2">
-                  </li>
-                  <li>
-                    <img class="stars" src="#" alt="3">
-                  </li>
-                  <li>
-                    <img class="stars" src="#" alt="4">
-                  </li>
-                </ul>
-                <p class="rating" href="#">Рейтинг: 9,2</p>
-              </div>
+              <p>Гостиница</p>
+              <b>От 5000 ₽</b>
+              <a class="button description-card-button" href="#">Подробнее</a>
+              <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
+              <ul class="stars-count">
+                <li>
+                  <img class="stars" src="#" alt="1">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="2">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="3">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="4">
+                </li>
+              </ul>
+              <p class="rating" href="#">Рейтинг: 9,2</p>
             </li>
             <li class="product-item">
-              <a class="product-card-link" href="#">
+              <a class="product-card-link-image" href="#">
                 <img class="product-card-image" alt="Третий вариант гостиницы" src="images/hotel-3.jpg" width="300" height="212">
+              </a>
+              <a class="product-card-link">
                 <h3>Desert Quail Inn</h3>
               </a>
-              <div class="product-card-description-wrapper">
-                <p>Гостиница</p>
-                <b>От 2500 ₽</b>
-                <a class="description-card-button" href="#">Подробнее</a>
-                <a class="description-card-button to-favorites-button" href="#">В избранное</a>
-                <ul class="stars-count">
-                  <li>
-                    <img class="stars" src="#" alt="1">
-                  </li>
-                  <li>
-                    <img class="stars" src="#" alt="2">
-                  </li>
-                  <li>
-                    <img class="stars" src="#" alt="3">
-                  </li>
-                </ul>
-                <p class="rating" href="#">Рейтинг: 6,9</p>
-              </div>
+              <p>Гостиница</p>
+              <b>От 2500 ₽</b>
+              <a class="button description-card-button" href="#">Подробнее</a>
+              <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
+              <ul class="stars-count">
+                <li>
+                  <img class="stars" src="#" alt="1">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="2">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="3">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="4">
+                </li>
+              </ul>
+              <p class="rating" href="#">Рейтинг: 6,9</p>
             </li>
             <li class="product-item">
-              <a class="product-card-link" href="#">
+              <a class="product-card-link-image" href="#">
                 <img class="product-card-image" alt="Четвертый вариант гостиницы" src="images/hotel-4.jpg" width="300" height="212">
+              </a>
+              <a class="product-card-link">
                 <h3>GreenTree Inn</h3>
               </a>
-              <div class="product-card-description-wrapper">
-                <p>Гостиница</p>
-                <b>От 1500 ₽</b>
-                <a class="description-card-button" href="#">Подробнее</a>
-                <a class="description-card-button to-favorites-button" href="#">В избранное</a>
-                <ul class="stars-count">
-                  <li>
-                    <img class="stars" src="#" alt="1">
-                  </li>
-                  <li>
-                    <img class="stars" src="#" alt="2">
-                  </li>
-                </ul>
-                <p class="rating" href="#">Рейтинг: 5,0</p>
-              </div>
+              <p>Гостиница</p>
+              <b>От 1500 ₽</b>
+              <a class="button description-card-button" href="#">Подробнее</a>
+              <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
+              <ul class="stars-count">
+                <li>
+                  <img class="stars" src="#" alt="1">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="2">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="3">
+                </li>
+                <li>
+                  <img class="stars" src="#" alt="4">
+                </li>
+              </ul>
+              <p class="rating" href="#">Рейтинг: 5,0</p>
             </li>
           </ul>
         </section>
