Вводит небольшую правку

--- a/catalog.html
+++ b/catalog.html
@@ -63,6 +63,7 @@
               </li>
             </ul>
             <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="post">
+              <!-- Информация для себя, высота фильтра 160 пикселей (сейчас 157 до стилизация ползунков)-->
               <fieldset class="catalog-filter-group">
                 <legend class="catalog-filter-title">Инфраструктура:</legend>
                 <ul class="catalog-filter-list">
