Добавляет стилизацию кнопок фильтра

--- a/catalog.html
+++ b/catalog.html
@@ -132,8 +132,8 @@
                 </div>
               </fieldset>
               <div class="results-filter-button-wrapper">
-                <button class="filter-button button" type="submit">Применить</button>
-                <button class="reset-button button" type="reset">Сбросить</button>
+                <button class="button filter-button" type="submit">Применить</button>
+                <button class="button reset-button" type="reset">Сбросить</button>
               </div>
             </form>
           </div>
