Добавляет правки для catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -25,18 +25,21 @@
             </li>
           </ul>
           <ul class="navigation-list navigation-user">
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
+            <li>
+              <a class="search-icon-nav" href="#">
                 <span class="visually-hidden">
                   Поиск
                 </span>
               </a>
             </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
+            <li>
+              <a class="card-icon-nav" href="#">
                 <span class="visually-hidden">
                   Избранные
                 </span>
+                <div class="card-counts">
+                  <span class="test">12</span>
+                </div>
               </a>
             </li>
             <li class="navigation-booking">
