--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 <span class="visually-hidden">
                   Избранные
                 </span>
-                 <div class="card-counts"><span class="test">12</span></div>
+                <div class="card-counts">
+                  <span class="test">12</span>
+                </div>
               </a>
             </li>
             <li class="navigation-booking">
