--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
                   Избранные
                 </span>
                 <div class="card-counts">
-                  <span class="test">12</span>
+                  <span class="card-counts-number">12</span>
                 </div>
               </a>
             </li>
