--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <span class="visually-hidden">
                   Избранные
                 </span>
-                <div class="card-counts">
+                <div class="card-counts-number">
                   <span class="test">12</span>
                 </div>
               </a>
