Дополнительные правки в навигации

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <span class="visually-hidden">
                   Избранные
                 </span>
-                <div class="card-counts-number">
-                  <span class="test">12</span>
+                <div class="card-counts">
+                  <span class="card-counts-number">12</span>
                 </div>
               </a>
             </li>
