Добавляет декоративное подчеркивание в преимуществах

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </ul>
         <article class="blog-article blog-article-2">
           <div class="blog-article-description">
-            <h3>Там есть мост дьявола</h3>
+            <h3>Там есть <br> мост дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </div>
           <img class="blog-article-img" alt="Пейзаж Седоны" src="images/article-2.jpg" width="800" height="385">
