Добавляет бэкграунд пикчи в футер
Завершает верстку index.html

--- a/catalog.html
+++ b/catalog.html
@@ -304,26 +304,24 @@
 
       <footer class="page-footer">
         <ul class="social-list">
-          <li class="social-item">
-            <a class="social-button" href="#">
+          <li>
+            <a class="social-button-vk" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
-          <li class="social-item">
-            <a class="social-button" href="#">
+          <li>
+            <a class="social-button-tg" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
-          <li class="social-item">
-            <a class="social-button" href="#">
+          <li>
+            <a class="social-button-yt" href="https://www.youtube.com/user/htmlacademyru">
               <span class="visually-hidden">Ютуб</span>
             </a>
           </li>
         </ul>
         <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        <a href="https://htmlacademy.ru/">
-          <img class="footer-logo-copyright" alt="Логотип создателя вёрстки" src="images/logo-htmlacademy.svg" width="115" height="33">
-        </a>
+        <a class="footer-logo-copyright" href="https://htmlacademy.ru/"></a>
       </footer>
     </div>
   </body>
