Добавляет бэкграунд пикчи
Также вносит небольшие правки в навигацию обеих страниц

+ правка в свитч кнопках под каталогом

--- a/catalog.html
+++ b/catalog.html
@@ -57,9 +57,11 @@
             <h1>Гостиницы Седоны</h1>
             <ul class="breadcrumbs">
               <li>
-                <a href="index.html">
+                <a class="breadcrumbs-home" href="index.html">
                   <span class="visually-hidden">Главная</span>
                 </a>
+              </li>
+              <li class="breadcrumbs-arrow">
               </li>
               <li class="breadcrumbs-item-current">
                 Гостиницы
@@ -150,17 +152,17 @@
           </select>
           <ul class="layout-list">
             <li>
-              <a class="layout-item layout-item-current" href="#">
+              <a class="layout-item-grids view-icon-catalog layout-item-current" href="#">
                 <span class="visually-hidden">Показать карточки</span>
               </a>
             </li>
             <li>
-              <a class="layout-item" href="#">
+              <a class="layout-item-extensive view-icon-catalog" href="#">
                 <span class="visually-hidden">Показать более подробно</span>
               </a>
             </li>
             <li>
-              <a class="layout-item" href="#">
+              <a class="layout-item-linearly view-icon-catalog" href="#">
                 <span class="visually-hidden">Показать список</span>
               </a>
             </li>
@@ -173,7 +175,7 @@
               <a class="product-card-link-image" href="#">
                 <img class="product-card-image" alt="Первый вариант гостиницы" src="images/hotel-1.jpg" width="300" height="212">
               </a>
-              <a class="product-card-link">
+              <a class="product-card-link" href="#">
                 <h3>Amara Resort & Spa</h3>
               </a>
               <p>Гостиница</p>
@@ -181,18 +183,10 @@
               <a class="button description-card-button" href="#">Подробнее</a>
               <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
               <ul class="stars-count">
-                <li>
-                  <img class="stars" src="#" alt="1">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="2">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="3">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="4">
-                </li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
               </ul>
               <p class="rating" href="#">Рейтинг: 8,5</p>
             </li>
@@ -200,26 +194,18 @@
               <a class="product-card-link-image" href="#">
                 <img class="product-card-image" alt="Второй вариант гостиницы" src="images/hotel-2.jpg" width="300" height="212">
               </a>
-              <a class="product-card-link">
+              <a class="product-card-link" href="#">
                 <h3>Villas at Poco Diablo</h3>
               </a>
               <p>Гостиница</p>
               <b>От 5000 ₽</b>
               <a class="button description-card-button" href="#">Подробнее</a>
-              <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
+              <a class="button description-card-button to-favorites-button desired" href="#">В избранном</a>
               <ul class="stars-count">
-                <li>
-                  <img class="stars" src="#" alt="1">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="2">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="3">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="4">
-                </li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
               </ul>
               <p class="rating" href="#">Рейтинг: 9,2</p>
             </li>
@@ -227,7 +213,7 @@
               <a class="product-card-link-image" href="#">
                 <img class="product-card-image" alt="Третий вариант гостиницы" src="images/hotel-3.jpg" width="300" height="212">
               </a>
-              <a class="product-card-link">
+              <a class="product-card-link" href="#">
                 <h3>Desert Quail Inn</h3>
               </a>
               <p>Гостиница</p>
@@ -235,18 +221,9 @@
               <a class="button description-card-button" href="#">Подробнее</a>
               <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
               <ul class="stars-count">
-                <li>
-                  <img class="stars" src="#" alt="1">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="2">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="3">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="4">
-                </li>
+                <li></li>
+                <li></li>
+                <li></li>
               </ul>
               <p class="rating" href="#">Рейтинг: 6,9</p>
             </li>
@@ -254,7 +231,7 @@
               <a class="product-card-link-image" href="#">
                 <img class="product-card-image" alt="Четвертый вариант гостиницы" src="images/hotel-4.jpg" width="300" height="212">
               </a>
-              <a class="product-card-link">
+              <a class="product-card-link" href="#">
                 <h3>GreenTree Inn</h3>
               </a>
               <p>Гостиница</p>
@@ -262,18 +239,8 @@
               <a class="button description-card-button" href="#">Подробнее</a>
               <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
               <ul class="stars-count">
-                <li>
-                  <img class="stars" src="#" alt="1">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="2">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="3">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="4">
-                </li>
+                <li></li>
+                <li></li>
               </ul>
               <p class="rating" href="#">Рейтинг: 5,0</p>
             </li>
@@ -288,7 +255,7 @@
 
           <a class="switch-button" href="#">4</a>
 
-          <a class="switch-button pages-count" href="#">...</a>
+          <p class="switch-button pages-count">...</p>
 
           <a class="switch-button" href="#">10</a>
         </section>
