Вносит правку в хедер
Убирает второй список navigation list из за ненадобности

--- a/index.html
+++ b/index.html
@@ -26,30 +26,20 @@
               <a class="navigation-link" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
-          <ul class="navigation-list navigation-user">
-            <li>
-              <a class="search-icon-nav" href="#">
-                <span class="visually-hidden">
-                  Поиск
-                </span>
-              </a>
-            </li>
-            <li>
-              <a class="card-icon-nav" href="#">
-                <span class="visually-hidden">
-                  Избранные
-                </span>
-                <div class="card-counts">
-                  <span class="card-counts-number">12</span>
-                </div>
-              </a>
-            </li>
-            <li class="navigation-booking">
-              <a class="button booking" href="#">
-                Хочу сюда!
-              </a>
-            </li>
-          </ul>
+          <a class="search-icon-nav" href="#">
+            <span class="visually-hidden">
+               Поиск
+            </span>
+          </a>
+          <a class="card-icon-nav" href="#">
+            <span class="visually-hidden">
+              Избранные
+             </span>
+            <div class="card-counts">
+              <span class="card-counts-number">12</span>
+            </div>
+          </a>
+          <a class="button booking" href="#">Хочу сюда!</a>
         </nav>
       </header>
 
