--- a/catalog.html
+++ b/catalog.html
@@ -20,34 +20,24 @@
             <li class="navigation-item">
               <a class="navigation-link" href="about.html">О Седоне</a>
             </li>
-            <li class="navigation-item navigation-link-current">
-              <a class="navigation-link" href="#">Гостиницы</a>
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-current" href="#">Гостиницы</a>
             </li>
           </ul>
-          <ul class="navigation-list navigation-user">
-            <li>
-              <a class="search-icon-nav" href="#">
-                <span class="visually-hidden">
-                  Поиск
-                </span>
-              </a>
-            </li>
-            <li>
-              <a class="card-icon-nav" href="#">
-                <span class="visually-hidden">
-                  Избранные
-                </span>
-                <div class="card-counts">
-                  <span class="card-counts-number">12</span>
-                </div>
-              </a>
-            </li>
-            <li class="navigation-booking">
-              <a class="button booking" href="#">
-                Хочу сюда!
-              </a>
-            </li>
-          </ul>
+          <a class="search-icon-nav" href="#">
+            <span class="visually-hidden">
+               Поиск
+            </span>
+          </a>
+          <a class="card-icon-nav" href="#">
+            <span class="visually-hidden">
+              Избранные
+             </span>
+            <div class="card-counts">
+              <span class="card-counts-number">12</span>
+            </div>
+          </a>
+          <a class="button booking" href="#">Хочу сюда!</a>
         </nav>
       </header>
 
