Вносит правки в соц иконки футера

--- a/catalog.html
+++ b/catalog.html
@@ -261,17 +261,17 @@
 
       <footer class="page-footer">
         <ul class="social-list">
-          <li>
+          <li class="social-button-vk-wrapper">
             <a class="social-button-vk" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
-          <li>
+          <li class="social-button-tg-wrapper">
             <a class="social-button-tg" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
-          <li>
+          <li class="social-button-yt-wrapper">
             <a class="social-button-yt" href="https://www.youtube.com/user/htmlacademyru">
               <span class="visually-hidden">Ютуб</span>
             </a>
