--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <li class="advantages-item-icons advantages-item-icons-background">
             <div class="advantages-description-wrapper advantage-icon-present">
               <h3>Сувениры</h3>
-              <p>Не только китайского, но и настоящего местного производства!</p>
+              <p>Не только китайского, <br>но и настоящего местного производства!</p>
             </div>
           </li>
         </ul>
@@ -123,17 +123,17 @@
 
       <footer class="page-footer">
         <ul class="social-list">
-          <li>
+          <li class="social-button-vk-wrapper">
             <a class="social-button-vk" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
-          <li>
+          <li class="social-button-tg-wrapper">
             <a class="social-button-tg" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
-          <li>
+          <li class="social-button-yt-wrapper">
             <a class="social-button-yt" href="https://www.youtube.com/user/htmlacademyru">
               <span class="visually-hidden">Ютуб</span>
             </a>
