Добавил стилизацию чекбоксов в мейн фильтре каталога

--- a/catalog.html
+++ b/catalog.html
@@ -64,20 +64,23 @@
                 <ul class="catalog-filter-list">
                   <li>
                     <label class="control">
-                      <input class="cotrol-input" type="checkbox" name="swimming-pool">
-                      Бассейн
+                      <input class="visually-hidden control-input" type="checkbox" name="swimming-pool" checked>
+                      <span class="control-mark"></span>
+                      <span class="control-label">Бассейн</span>
                     </label>
                   </li>
                   <li>
                     <label class="control">
-                      <input class="cotrol-input" type="checkbox" name="parking space">
-                      Парковка
+                      <input class="visually-hidden control-input" type="checkbox" name="parking space" checked>
+                      <span class="control-mark"></span>
+                      <span class="control-label">Парковка</span>
                     </label>
                   </li>
                   <li>
                     <label class="control">
-                      <input class="cotrol-input" type="checkbox" name="internet">
-                      Wi-Fi
+                      <input class="visually-hidden control-input" type="checkbox" name="internet">
+                      <span class="control-mark"></span>
+                      <span class="control-label">Wi-Fi</span>
                     </label>
                   </li>
                 </ul>
