Добавляет стилизацию радио чекбоксам

--- a/catalog.html
+++ b/catalog.html
@@ -90,20 +90,23 @@
                 <ul class="catalog-filter-list">
                   <li>
                     <label class="control">
-                      <input class="cotrol-input-radio" type="radio" for="filter-form" name="category">
-                      Гостиница
+                      <input class="visually-hidden control-input-radio" type="radio" for="filter-form" name="category" checked>
+                      <span class="control-mark-radio"></span>
+                      <span class="control-label">Гостиница</span>
                     </label>
                   </li>
                   <li>
                     <label class="control">
-                      <input class="cotrol-input-radio" type="radio" for="filter-form" name="category">
-                      Мотель
+                      <input class="visually-hidden control-input-radio" type="radio" for="filter-form" name="category">
+                      <span class="control-mark-radio"></span>
+                      <span class="control-label">Мотель</span>
                     </label>
                   </li>
                   <li>
                     <label class="control">
-                      <input class="cotrol-input-radio" type="radio" for="filter-form" name="category">
-                      Апартаменты
+                      <input class="visually-hidden control-input-radio" type="radio" for="filter-form" name="category">
+                      <span class="control-mark-radio"></span>
+                      <span class="control-label">Апартаменты</span>
                     </label>
                   </li>
                 </ul>
