:heavy_check_mark: Сборка #5

--- a/5/index.html
+++ b/5/index.html
@@ -27,27 +27,20 @@
               <a class="navigation-link" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
-          <ul class="navigation-list navigation-user">
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
-                <span class="visually-hidden">
-                  Поиск
-                </span>
-              </a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
-                <span class="visually-hidden">
-                  Избранные
-                </span>
-              </a>
-            </li>
-            <li class="navigation-booking">
-              <a class="button booking" href="#">
-                Хочу сюда!
-              </a>
-            </li>
-          </ul>
+          <a class="search-icon-nav" href="#">
+            <span class="visually-hidden">
+               Поиск
+            </span>
+          </a>
+          <a class="card-icon-nav" href="#">
+            <span class="visually-hidden">
+              Избранные
+             </span>
+            <div class="card-counts">
+              <span class="card-counts-number">12</span>
+            </div>
+          </a>
+          <a class="button booking" href="#">Хочу сюда!</a>
         </nav>
       </header>
 
@@ -84,7 +77,7 @@
         </ul>
         <article class="blog-article blog-article-2">
           <div class="blog-article-description">
-            <h3>Там есть мост дьявола</h3>
+            <h3>Там есть <br> мост дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </div>
           <img class="blog-article-img" alt="Пейзаж Седоны" src="images/article-2.jpg" width="800" height="385">
@@ -110,7 +103,7 @@
           <li class="advantages-item-icons advantages-item-icons-background">
             <div class="advantages-description-wrapper advantage-icon-present">
               <h3>Сувениры</h3>
-              <p>Не только китайского, но и настоящего местного производства!</p>
+              <p>Не только китайского, <br>но и настоящего местного производства!</p>
             </div>
           </li>
         </ul>
@@ -131,26 +124,24 @@
 
       <footer class="page-footer">
         <ul class="social-list">
-          <li class="social-item">
-            <a class="social-button" href="#">
+          <li class="social-button-vk-wrapper">
+            <a class="social-button-vk" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
-          <li class="social-item">
-            <a class="social-button" href="#">
+          <li class="social-button-tg-wrapper">
+            <a class="social-button-tg" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
-          <li class="social-item">
-            <a class="social-button" href="#">
+          <li class="social-button-yt-wrapper">
+            <a class="social-button-yt" href="https://www.youtube.com/user/htmlacademyru">
               <span class="visually-hidden">Ютуб</span>
             </a>
           </li>
         </ul>
         <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        <a href="https://htmlacademy.ru/">
-          <img class="footer-logo-copyright" alt="Логотип создателя вёрстки" src="images/logo-htmlacademy.svg" width="115" height="33">
-        </a>
+        <a class="footer-logo-copyright" href="https://htmlacademy.ru/"></a>
       </footer>
     </div>
   </body>
