--- a/5/catalog.html
+++ b/5/catalog.html
@@ -21,31 +21,24 @@
             <li class="navigation-item">
               <a class="navigation-link" href="about.html">О Седоне</a>
             </li>
-            <li class="navigation-item navigation-link-current">
-              <a class="navigation-link" href="#">Гостиницы</a>
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-current" href="#">Гостиницы</a>
             </li>
           </ul>
-          <ul class="navigation-list navigation-user">
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
-                <span class="visually-hidden">
-                  Поиск
-                </span>
-              </a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
-                <span class="visually-hidden">
-                  Избранные
-                </span>
-              </a>
-            </li>
-            <li class="navigation-booking">
-              <a class="button booking" href="#">
-                Хочу сюда!
-              </a>
-            </li>
-          </ul>
+          <a class="search-icon-nav" href="#">
+            <span class="visually-hidden">
+               Поиск
+            </span>
+          </a>
+          <a class="card-icon-nav" href="#">
+            <span class="visually-hidden">
+              Избранные
+             </span>
+            <div class="card-counts">
+              <span class="card-counts-number">12</span>
+            </div>
+          </a>
+          <a class="button booking" href="#">Хочу сюда!</a>
         </nav>
       </header>
 
@@ -55,9 +48,11 @@
             <h1>Гостиницы Седоны</h1>
             <ul class="breadcrumbs">
               <li>
-                <a href="index.html">
+                <a class="breadcrumbs-home" href="index.html">
                   <span class="visually-hidden">Главная</span>
                 </a>
+              </li>
+              <li class="breadcrumbs-arrow">
               </li>
               <li class="breadcrumbs-item-current">
                 Гостиницы
@@ -70,20 +65,23 @@
                 <ul class="catalog-filter-list">
                   <li>
                     <label class="control">
-                      <input class="cotrol-input" type="checkbox" name="swimming-pool">
-                      Бассейн
+                      <input class="visually-hidden control-input" type="checkbox" name="swimming-pool" checked>
+                      <span class="control-mark"></span>
+                      <span class="control-label">Бассейн</span>
                     </label>
                   </li>
                   <li>
                     <label class="control">
-                      <input class="cotrol-input" type="checkbox" name="parking space">
-                      Парковка
+                      <input class="visually-hidden control-input" type="checkbox" name="parking space" checked>
+                      <span class="control-mark"></span>
+                      <span class="control-label">Парковка</span>
                     </label>
                   </li>
                   <li>
                     <label class="control">
-                      <input class="cotrol-input" type="checkbox" name="internet">
-                      Wi-Fi
+                      <input class="visually-hidden control-input" type="checkbox" name="internet">
+                      <span class="control-mark"></span>
+                      <span class="control-label">Wi-Fi</span>
                     </label>
                   </li>
                 </ul>
@@ -93,20 +91,23 @@
                 <ul class="catalog-filter-list">
                   <li>
                     <label class="control">
-                      <input class="cotrol-input-radio" type="radio" for="filter-form" name="category">
-                      Гостиница
+                      <input class="visually-hidden control-input-radio" type="radio" for="filter-form" name="category" checked>
+                      <span class="control-mark-radio"></span>
+                      <span class="control-label">Гостиница</span>
                     </label>
                   </li>
                   <li>
                     <label class="control">
-                      <input class="cotrol-input-radio" type="radio" for="filter-form" name="category">
-                      Мотель
+                      <input class="visually-hidden control-input-radio" type="radio" for="filter-form" name="category">
+                      <span class="control-mark-radio"></span>
+                      <span class="control-label">Мотель</span>
                     </label>
                   </li>
                   <li>
                     <label class="control">
-                      <input class="cotrol-input-radio" type="radio" for="filter-form" name="category">
-                      Апартаменты
+                      <input class="visually-hidden control-input-radio" type="radio" for="filter-form" name="category">
+                      <span class="control-mark-radio"></span>
+                      <span class="control-label">Апартаменты</span>
                     </label>
                   </li>
                 </ul>
@@ -128,8 +129,8 @@
                   </div>
                 </div>
                 <div class="range-input">
-                  <input type="range" class="range-min" min="0" max="10000" value="0" step="100">
-                  <input type="range" class="range-max" min="0" max="10000" value="9000" step="100">
+                  <input type="range" class="range-min" min="0" max="12000" value="0" step="100">
+                  <input type="range" class="range-max" min="0" max="12000" value="9000" step="100">
                 </div>
               </fieldset>
               <div class="results-filter-button-wrapper">
@@ -148,17 +149,17 @@
           </select>
           <ul class="layout-list">
             <li>
-              <a class="layout-item layout-item-current" href="#">
+              <a class="layout-item-grids view-icon-catalog layout-item-current" href="#">
                 <span class="visually-hidden">Показать карточки</span>
               </a>
             </li>
             <li>
-              <a class="layout-item" href="#">
+              <a class="layout-item-extensive view-icon-catalog" href="#">
                 <span class="visually-hidden">Показать более подробно</span>
               </a>
             </li>
             <li>
-              <a class="layout-item" href="#">
+              <a class="layout-item-linearly view-icon-catalog" href="#">
                 <span class="visually-hidden">Показать список</span>
               </a>
             </li>
@@ -171,7 +172,7 @@
               <a class="product-card-link-image" href="#">
                 <img class="product-card-image" alt="Первый вариант гостиницы" src="images/hotel-1.jpg" width="300" height="212">
               </a>
-              <a class="product-card-link">
+              <a class="product-card-link" href="#">
                 <h3>Amara Resort & Spa</h3>
               </a>
               <p>Гостиница</p>
@@ -179,18 +180,10 @@
               <a class="button description-card-button" href="#">Подробнее</a>
               <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
               <ul class="stars-count">
-                <li>
-                  <img class="stars" src="#" alt="1">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="2">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="3">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="4">
-                </li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
               </ul>
               <p class="rating" href="#">Рейтинг: 8,5</p>
             </li>
@@ -198,26 +191,18 @@
               <a class="product-card-link-image" href="#">
                 <img class="product-card-image" alt="Второй вариант гостиницы" src="images/hotel-2.jpg" width="300" height="212">
               </a>
-              <a class="product-card-link">
+              <a class="product-card-link" href="#">
                 <h3>Villas at Poco Diablo</h3>
               </a>
               <p>Гостиница</p>
               <b>От 5000 ₽</b>
               <a class="button description-card-button" href="#">Подробнее</a>
-              <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
+              <a class="button description-card-button to-favorites-button desired" href="#">В избранном</a>
               <ul class="stars-count">
-                <li>
-                  <img class="stars" src="#" alt="1">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="2">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="3">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="4">
-                </li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
               </ul>
               <p class="rating" href="#">Рейтинг: 9,2</p>
             </li>
@@ -225,7 +210,7 @@
               <a class="product-card-link-image" href="#">
                 <img class="product-card-image" alt="Третий вариант гостиницы" src="images/hotel-3.jpg" width="300" height="212">
               </a>
-              <a class="product-card-link">
+              <a class="product-card-link" href="#">
                 <h3>Desert Quail Inn</h3>
               </a>
               <p>Гостиница</p>
@@ -233,18 +218,9 @@
               <a class="button description-card-button" href="#">Подробнее</a>
               <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
               <ul class="stars-count">
-                <li>
-                  <img class="stars" src="#" alt="1">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="2">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="3">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="4">
-                </li>
+                <li></li>
+                <li></li>
+                <li></li>
               </ul>
               <p class="rating" href="#">Рейтинг: 6,9</p>
             </li>
@@ -252,7 +228,7 @@
               <a class="product-card-link-image" href="#">
                 <img class="product-card-image" alt="Четвертый вариант гостиницы" src="images/hotel-4.jpg" width="300" height="212">
               </a>
-              <a class="product-card-link">
+              <a class="product-card-link" href="#">
                 <h3>GreenTree Inn</h3>
               </a>
               <p>Гостиница</p>
@@ -260,18 +236,8 @@
               <a class="button description-card-button" href="#">Подробнее</a>
               <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
               <ul class="stars-count">
-                <li>
-                  <img class="stars" src="#" alt="1">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="2">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="3">
-                </li>
-                <li>
-                  <img class="stars" src="#" alt="4">
-                </li>
+                <li></li>
+                <li></li>
               </ul>
               <p class="rating" href="#">Рейтинг: 5,0</p>
             </li>
@@ -286,7 +252,7 @@
 
           <a class="switch-button" href="#">4</a>
 
-          <a class="switch-button pages-count" href="#">...</a>
+          <p class="switch-button pages-count">...</p>
 
           <a class="switch-button" href="#">10</a>
         </section>
@@ -302,26 +268,24 @@
 
       <footer class="page-footer">
         <ul class="social-list">
-          <li class="social-item">
-            <a class="social-button" href="#">
+          <li class="social-button-vk-wrapper">
+            <a class="social-button-vk" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
-          <li class="social-item">
-            <a class="social-button" href="#">
+          <li class="social-button-tg-wrapper">
+            <a class="social-button-tg" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
-          <li class="social-item">
-            <a class="social-button" href="#">
+          <li class="social-button-yt-wrapper">
+            <a class="social-button-yt" href="https://www.youtube.com/user/htmlacademyru">
               <span class="visually-hidden">Ютуб</span>
             </a>
           </li>
         </ul>
         <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        <a href="https://htmlacademy.ru/">
-          <img class="footer-logo-copyright" alt="Логотип создателя вёрстки" src="images/logo-htmlacademy.svg" width="115" height="33">
-        </a>
+        <a class="footer-logo-copyright" href="https://htmlacademy.ru/"></a>
       </footer>
     </div>
   </body>
