Добавляет стилизацию селекту в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -141,11 +141,13 @@
         </section>
         <section class="results">
           <h2>Найдено гостиниц: 38</h2>
-          <select  class="filter-selection" size="1" aria-label="Сортировка">
-            <option selected value="s1">Сначала дешёвые</option>
-            <option value="s2">Сначала дорогие</option>
-            <option value="s3">Сначала популярные</option>
-          </select>
+          <div class="filter-selection-wrapper">
+            <select class="filter-selection" size="1" aria-label="Сортировка">
+              <option selected value="s1">Сначала дешёвые</option>
+              <option value="s2">Сначала дорогие</option>
+              <option value="s3">Сначала популярные</option>
+            </select>
+          </div>
           <ul class="layout-list">
             <li>
               <a class="layout-item-grids view-icon-catalog layout-item-current" href="#">
