Добавляет интерактив всем элементам, кроме футера
hover, active, focus-visible (*)

--- a/catalog.html
+++ b/catalog.html
@@ -54,7 +54,7 @@
               <li class="breadcrumbs-arrow">
               </li>
               <li class="breadcrumbs-item-current">
-                Гостиницы
+                <a href="catalog.html">Гостиницы</a>
               </li>
             </ul>
             <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="post">
