--- a/5/catalog.html
+++ b/5/catalog.html
@@ -55,7 +55,7 @@
               <li class="breadcrumbs-arrow">
               </li>
               <li class="breadcrumbs-item-current">
-                Гостиницы
+                <a href="catalog.html">Гостиницы</a>
               </li>
             </ul>
             <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="post">
@@ -142,11 +142,13 @@
         </section>
         <section class="results">
           <h2>Найдено гостиниц: 38</h2>
-          <select  class="filter-selection" size="1" aria-label="Сортировка">
-            <option selected value="s1">Сначала дешёвые</option>
-            <option value="s2">Сначала дорогие</option>
-            <option value="s3">Сначала популярные</option>
-          </select>
+          <div class="filter-selection-wrapper">
+            <select class="filter-selection" size="1" aria-label="Сортировка">
+              <option selected value="s1">Сначала дешёвые</option>
+              <option value="s2">Сначала дорогие</option>
+              <option value="s3">Сначала популярные</option>
+            </select>
+          </div>
           <ul class="layout-list">
             <li>
               <a class="layout-item-grids view-icon-catalog layout-item-current" href="#">
