Добавил вижуалли хайден описании декор. звездам

--- a/catalog.html
+++ b/catalog.html
@@ -180,6 +180,7 @@
               <b>От 4000 ₽</b>
               <a class="button description-card-button" href="#">Подробнее</a>
               <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
+              <h4 class="visually-hidden">Четырёхзвездочая гостиница</h4>
               <ul class="stars-count">
                 <li></li>
                 <li></li>
@@ -199,6 +200,7 @@
               <b>От 5000 ₽</b>
               <a class="button description-card-button" href="#">Подробнее</a>
               <a class="button description-card-button to-favorites-button desired" href="#">В избранном</a>
+              <h4 class="visually-hidden">Четырёхзвездочая гостиница</h4>
               <ul class="stars-count">
                 <li></li>
                 <li></li>
@@ -218,6 +220,7 @@
               <b>От 2500 ₽</b>
               <a class="button description-card-button" href="#">Подробнее</a>
               <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
+              <h4 class="visually-hidden">Трёхзвездочая гостиница</h4>
               <ul class="stars-count">
                 <li></li>
                 <li></li>
@@ -236,6 +239,7 @@
               <b>От 1500 ₽</b>
               <a class="button description-card-button" href="#">Подробнее</a>
               <a class="button description-card-button to-favorites-button" href="#">В избранное</a>
+              <h4 class="visually-hidden">Двухзвёздочная гостиница</h4>
               <ul class="stars-count">
                 <li></li>
                 <li></li>
