--- a/catalog.html
+++ b/catalog.html
@@ -262,8 +262,8 @@
           <a class="switch-button" href="#">10</a>
         </section>
         <section class="newsletter-catalog">
-          <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
-          <p class="newsletter-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+          <h2>Подпишитесь на рассылку</h2>
+          <p>Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
             <input class="newsletter-text" type="email" id="newsletter-mail" name="newsletter-mail" placeholder="Ваш e-mail">
             <button class="button newsletter-button" type="submit">Подписаться</button>
